--- a/linux.html
+++ b/linux.html
@@ -163,17 +163,53 @@
         <div class="sidebar">
         <section>
             <h2>Unix Philosophy</h2>
-            <p>The Unix Philosophy emphasizes simplicity, modularity, and portability. This approach has made Unix-based systems, such as Linux, powerful and versatile. The philosophy has also influenced other areas of software development, leading to more robust and user-friendly systems.</p>
+            <p>The Unix philosophy is a set of design principles that underlie the development of the Unix operating system and its descendants, including Linux. These principles emphasize simplicity, modularity, and the use of small, focused tools that can be combined to perform complex tasks. The Unix philosophy is often summarized by the following key principles:
+<br>
+                1.Small is Beautiful:
+                <br>               The Unix mindset that "small is beautiful" encourages the creation of compact, straightforward, and task-specific programs that perform well. It places a strong emphasis on software design's modularity, efficiency, and clarity.
+                <br>                 2.Write Programs to Work Together:
+                <br>               Design programs to accept input from other programs and produce output that can be used by others, promoting interoperability through standard input and output streams.   
+                <br> 3.Choose Portability Over Efficiency:
+                <br>     Prioritize code portability—making it work on different systems—rather than optimizing for a specific one.
+                <br>     4.Use Text Streams:
+                <br>    Use plain text for data interchange between programs.
+                <br>     This allows for human-readable output and simplifies the connection between different tools.
+                <br>       5.The Rule of Silence:
+                <br>      Minimize unnecessary program output and avoid verbosity when there's nothing important or surprising to convey. Keep programs quiet when they have nothing significant to say.
+                <br>       6.Build on Existing Foundations:
+                <br>     in the context of the Unix/Linux philosophy means leveraging existing tools and libraries rather than starting from scratch. It encourages the reuse of established, reliable components to create new functionality, fostering efficiency and avoiding unnecessary duplication of effort.
+                <br>    7.Separation of Concerns:
+                <br>   Divide complex tasks into smaller, manageable parts, with each part addressing a specific aspect or concern independently.     
+                <br>     8.Document Everything:
+                <br>    Provide comprehensive and clear documentation for programs and systems to ensure understanding and effective use.
+                <br>    9.Community and Open Source:
+                <br>     Community: Collaboration of individuals sharing common interests or goals.
+                <br>     Open Source: Software with freely available source code for users to view, modify, and distribute.
+                <br>   Impact: Fosters collective development, transparency, and innovation through shared contributions.</p>
         </section>
 
         <h2>What is Linux?</h2>
         <p>Linux is a free and open-source operating system based on the Linux kernel. It is the most popular server operating system and powers many other Unix-like operating systems.</p>
 
         <h2>Linux Applications</h2>
-        <p>Linux is used in various applications, such as web servers, data centers, cloud computing, and supercomputers. It is also popular among enthusiasts who enjoy exploring the latest software developments and updates.</p>
+        <p>Every version of Linux operating system manages hardware resources, launches and handles applications and provides form of user interface. The huge amount of community for developers Apache, as well as for network operations, scientific computing tasks that require huge compute clusters, running database, desktop and endpoint computing and running mobile devices with OS version like Android. 
+            Linux is used in the following ways:
+           <br> Server OS for web servers, database servers, file servers, email servers and any other type of shared server. Designed to support high-volume and multithreading applications, Linux is well-suited for all types of server applications.
+           <br> Desktop OS for personal productivity computing. Linux is an open source and freely available desktop environment for users who prefer it to commercial OSes.
+           <br> Headless server OS for systems that do not require a graphical user interface (GUI) or directly connected terminal and keyboard. Headless systems are often used for remotely managed networking server and other devices.
+           <br> Embedded device or appliance OS for systems that require limited computing function. Linux is used as an embedded OS for a variety of applications, including household appliances, automotive entertainment systems and network file system appliances.
+           <br>Network OS for routers, switches, domain name system servers, home networking devices and more. For example, Cisco offers a version of the Cisco Internetwork Operating System (IOS) that uses the Linux kernel.
+           <br>Software development OS for enterprise software development. Although many development tools have been ported to Windows or other OSes, Linux is home to some of the most widely used open source software development tools. For example, git for distributed source control; vim and emacs for source code editing; and compilers and interpreters for almost every programming language.
+           <br> Cloud OS for cloud instances. Major cloud computing providers offer access to cloud computing instances running Linux for cloud servers, desktops and other services.
+           <br> Linux is highly configurable and depends on a modular design that enables users to customize their own versions of Linux. Depending on the application, Linux can be optimized for different purposes such as:
+           <br>networking performance;
+           <br>computation performance;
+           <br>deployment on specific hardware platforms; and
+           <br>deployment on systems with limited memory, storage or computing resources.
+           <br>Users can choose different Linux distributions for specific applications or adapt a specific distribution to incorporate custom kernel configurations.</p>
         <section>
             <h2>Evolution of Linux</h2>
-            <p>Linux was created by Linus Torvalds in 1991. It is the kernel of the operating system, responsible for managing hardware resources. Linux was originally created as a free and open-source alternative to the proprietary Unix operating system.</p>
+            <p>Linux was introduced on August 25, 1991 by Linus Torvalds a Finnish computer science student. At the beginning, when he announced the creation of the Linux kernel in a Usenet newsgroup post aimed to develop a free and open-source operating system kernel inspired by Unix. But his initial release was not a complete operating system, it provided the foundation for the development of the Linux operating system. Later on, contributions from developers worldwide led to the creation of additional components and complete Linux distributions. The open-source community’s ongoing efforts have made Linux a mature and widely used operating system in various computing environments today.</p>
         </section>
     
         <section>
