--- a/linux.html
+++ b/linux.html
@@ -184,13 +184,13 @@
                    }
         
                    .jump-to-section {
-                    line-height: 1.0;
+                    line-height: .5;
                     position: fixed;
                     top: 0;
                     right: 0;
                     padding: 20px;
                     display: none;
-                    transition: top 0.3s ease-in-out; /* Add smooth transition for better user experience */
+                    transition: top 0.2s ease-in-out; /* Add smooth transition for better user experience */
                 }
                 
                 .jump-to-section ul {
