--- a/linux.html
+++ b/linux.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="tittle.jpg" />
 
-    <title>Linux Info Site</title>
+    <title>Linux Forge</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -324,7 +324,7 @@
 
     <header>
         <div class="video-container">
-            <div class="video-overlay">     <h1>Welcome to the LinuxForge: Embracing the Linux Ecosystem</h1>
+            <div class="video-overlay">     <h1>Welcome to the Linux Forge: Embracing the Linux Ecosystem</h1>
             </div>
             <video autoplay muted loop>
               <source src="ac67787e7691d4a1da0a9178e0f74b0f.mp4" type="video/mp4">
